--- a/aspnet-core/src/CloverAce.Domain.Shared/Localization/CloverAce/en.json
+++ b/aspnet-core/src/CloverAce.Domain.Shared/Localization/CloverAce/en.json
@@ -1,8 +1,9 @@
 {
-  "culture": "en",
-  "texts": {
+  "Culture": "en",
+  "Texts": {
     "Menu:Home": "Home",
     "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io."
+    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
+    "Account:00001": "There is already an account with the same name: {name}"
   }
 }
